# channelstrip-cli

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  plot_clipper_types.py
.github/workflows/: docs.yml
include/: audio_utils.h  common_args.h  processor.h
plots/: plot_ntm_files.py
scripts/: plot_ntm_files.py  plot_osc.py
src/: audio_utils.cpp  chst.cpp  clipper.cpp  clipper_module.cpp  clipper_sample.cpp  clipper_sample_data.cpp  eq_module.cpp
src/clipper/: Makefile  clipper.cpp
